--- a/t/index.html
+++ b/t/index.html
@@ -5,8 +5,47 @@
 <title>Redirect</title>
 </head>
 <body>
-<script src="https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js"></script>
-<!-- This script will handle getting the ID from the URL and redirecting the user -->
-<script src="redirect.js"></script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyB9zlLH9xgSUrw2WEi4PCVtsU5jqdwaKj8",
+      authDomain: "url-tracker-f404e.firebaseapp.com",
+      databaseURL: "https://url-tracker-f404e-default-rtdb.firebaseio.com",
+      projectId: "url-tracker-f404e",
+      storageBucket: "url-tracker-f404e.appspot.com",
+      messagingSenderId: "73492629103",
+      appId: "1:73492629103:web:b755c95078d9600247ef9a"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+
+    // Get the "id" and "redirect" query parameters
+    const id = getParameterByName("id");
+    const redirect = getParameterByName("redirect");
+
+    // Add the "id" to the Firebase realtime database
+    const database = app.database();
+    const ref = database.ref("url-ids").push();
+    ref.set({
+      id: id
+    });
+
+    // Redirect the user to the "redirect" URL
+    window.location.href = redirect;
+
+    // Helper function to get a query parameter by name
+    function getParameterByName(name) {
+      name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+      const regex = new RegExp("[\\?&]" + name + "=([^&#]*)");
+      const results = regex.exec(location.search);
+      return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+    }
+  </script>
 </body>
 </html>
