--- a/t/index.html
+++ b/t/index.html
@@ -8,6 +8,7 @@
   <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js";
+    import { getDatabase } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-database.js";
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
   
@@ -30,7 +31,8 @@
     const redirect = getParameterByName("redirect");
 
     // Add the "id" to the Firebase realtime database
-    const database = app.database();
+    const database = getDatabase(app);
+
     const ref = database.ref("url-ids").push();
     ref.set({
       id: id
