Update how data is set

--- a/t/index.html
+++ b/t/index.html
@@ -8,7 +8,7 @@
   <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js";
-    import { getDatabase } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-database.js";
+    import { getDatabase, set, ref } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-database.js";
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
   
@@ -29,13 +29,13 @@
     // Get the "id" and "redirect" query parameters
     const id = getParameterByName("id");
     const redirect = getParameterByName("redirect");
+    console.log(`DEBUG: id = ${id}, redirect=${redirect}`);
 
     // Add the "id" to the Firebase realtime database
     const database = getDatabase(app);
 
-    const ref = database.ref("url-ids").push();
-    ref.set({
-      id: id
+    set(ref(database, `tracker/${id}`), {
+      id: 1
     });
 
     // Redirect the user to the "redirect" URL
