--- a/t/index.html
+++ b/t/index.html
@@ -5,38 +5,22 @@
 <title>Redirect</title>
 </head>
 <body>
-  <script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js";
-    import { getDatabase, set, ref } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-database.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyB9zlLH9xgSUrw2WEi4PCVtsU5jqdwaKj8",
-      authDomain: "url-tracker-f404e.firebaseapp.com",
-      databaseURL: "https://url-tracker-f404e-default-rtdb.firebaseio.com",
-      projectId: "url-tracker-f404e",
-      storageBucket: "url-tracker-f404e.appspot.com",
-      messagingSenderId: "73492629103",
-      appId: "1:73492629103:web:b755c95078d9600247ef9a"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-
+  <script>
     // Get the "id" and "redirect" query parameters
     const id = getParameterByName("id");
     const redirect = getParameterByName("redirect");
-    console.log(`DEBUG: id = ${id}, redirect=${redirect}`);
+    const urlKey = redirect.replace(/[^a-zA-Z0-9\-]/g, "-");
 
-    // Add the "id" to the Firebase realtime database
-    const database = getDatabase(app);
-
-    set(ref(database, `tracker/${id}`), {
-      id: 1
-    });
+    fetch(`https://url-tracker-f404e-default-rtdb.firebaseio.com/tracker/${id}`, {
+      method: "PUT",
+      body: JSON.stringify({ [urlKey]: 1 }),
+      headers: {
+        "Content-Type": "application/json"
+    }
+    })
+    .then(response => response.json())
+    .then(data => console.log(data))
+    .catch(error => console.error(error));
 
     // Redirect the user to the "redirect" URL
     window.location.href = redirect;
