--- a/t2/index.html
+++ b/t2/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Newsletter Redirect</title>
   <!-- Add Firebase SDK -->
-  <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+  <!-- <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script> -->
   <!-- Your Firebase Config -->
-  <script src="firebase-config.js"></script>
+  <!-- <script src="firebase-config.js"></script> -->
   <!-- Your JavaScript file -->
   <script type="module" src="main.js"></script>
 </head>
