--- a/t2/index.html
+++ b/t2/index.html
@@ -3,22 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Newsletter Redirect</title>
-  <!-- Add Firebase SDK -->
-  <!-- <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script> -->
-  <!-- Your Firebase Config -->
-  <!-- <script src="firebase-config.js"></script> -->
-  <!-- Your JavaScript file -->
+  <title>Redirecting...</title>
   <script type="module" src="main.js"></script>
 </head>
 <body>
-  <h1>Welcome to the Newsletter Redirect Page</h1>
-  <p>Please wait while we redirect you to the newsletter...</p>
-  <!-- Hidden Form to Capture Data -->
-  <form id="redirectForm">
-    <input type="hidden" id="userId" name="userId" value="">
-    <input type="hidden" id="redirectUrl" name="redirectUrl" value="">
-  </form>
+  <p>Redirecting...</p>
 </body>
 </html>
